# django-y-swagger-ui

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
y_swagger_ui/: apps.py  urls.py  views.py
y_swagger_ui/templates/y_swagger_ui/: swagger_ui.html
