[metadata]
name = django-y-swagger-ui
version = v1.0.1
description = A Django app to show swagger ui for OpenAPI specification.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zyunx/django-y-swagger-ui
author = Zhang Yun
author_email = zyunx.net@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    Django >= 4.1
